# accroitre

./: .gitignore  .markdownlintignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  SECURITY.md  clippy.toml  deny.toml  features.json  plan.toml  rust-catchup-1.78-1.94.1.md
.cargo/: config.toml
.github/workflows/: ci.yml  deny.yml  release.yml
accroitre/: Cargo.toml
accroitre-cli/: Cargo.toml  build.rs
accroitre-cli/src/: main.rs  pipeline.rs  tui.rs  update.rs
accroitre/benches/: hash.rs  scan.rs
accroitre/examples/: basic_copy.rs  resume_copy.rs  ssh_config.rs
accroitre/src/: lib.rs
accroitre/src/adapters/: cache.rs  lock.rs  log.rs  manifest.rs  mod.rs  remote_dedup.rs  ssh.rs  ssh_tar.rs
accroitre/src/domain/: error.rs  mod.rs  types.rs
accroitre/src/engine/: copy.rs  dedup.rs  delta.rs  hash.rs  linux_io.rs  macos_io.rs  mod.rs  scan.rs  verify.rs  windows_io.rs
accroitre/src/ports/: cache.rs  copier.rs  filesystem.rs  hasher.rs  mod.rs  progress.rs  ssh.rs  verifier.rs
