[workspace]
members = [
    "accroitre",
    "accroitre-cli",
]
resolver = "3"

[workspace.package]
version = "0.2.2"
edition = "2024"
rust-version = "1.96.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/greysquirr3l/accroitre"
readme = "README.md"
keywords = ["file-copy", "deduplication", "ssh", "backup", "cli"]
categories = ["command-line-utilities", "filesystem"]

[workspace.lints.clippy]
all = { level = "warn", priority = -2 }
pedantic = { level = "warn", priority = -2 }
nursery = { level = "warn", priority = -2 }
cargo = { level = "warn", priority = -2 }
perf = { level = "warn", priority = -2 }

module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
struct_excessive_bools = "allow"
multiple_crate_versions = "allow"

unwrap_used = { level = "deny", priority = -1 }
expect_used = { level = "deny", priority = -1 }
panic = { level = "deny", priority = -1 }
indexing_slicing = { level = "deny", priority = -1 }
cast_ptr_alignment = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

[workspace.dependencies]
# Core error handling
thiserror = "2"
anyhow = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Hashing
xxhash-rust = { version = "0.8", features = ["xxh3"] }
blake3 = "1"

# Parallel computation
rayon = "1"

# Tracing / logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Progress bars and spinners
indicatif = "0.17"
console = "0.15"

# SSH
russh = "0.61"

# SQLite
rusqlite = { version = "0.32", features = ["bundled"] }

# Tar streaming
tar = "0.4"
flate2 = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Byte buffers
bytes = "1"

# File system utilities
walkdir = "2"
glob = "0.3"

# POSIX / libc bindings
nix = { version = "0.29", features = ["fs", "ioctl"] }
libc = "0.2"

# Unique identifiers
ulid = { version = "1", features = ["serde"] }

# Temp files (for tests)
tempfile = "3"

# Windows FFI bindings
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_SystemInformation",
    "Win32_System_Ioctl",
] }

# HTTP client (for self-update)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Cryptographic hashing (SHA-256 for update verification)
sha2 = "0.10"

# Semantic version comparison
semver = "1"
