[package]
name = "accroitre-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "CLI for accroître — high-speed file copier with deduplication and SSH streaming."
publish = false

[[bin]]
name = "accro"
path = "src/main.rs"

[dependencies]
accroitre = { path = "../accroitre" }
anyhow = { workspace = true }
clap = { workspace = true }
console = { workspace = true }
glob = { workspace = true }
indicatif = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]

[dev-dependencies]
tempfile = { workspace = true }
