[package]
name = "accroitre"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "High-speed, cross-platform file copier with deduplication and SSH streaming."
publish = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
glob = { workspace = true }
xxhash-rust = { workspace = true }
blake3 = { workspace = true }
rayon = { workspace = true }
tar = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
nix = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
